# The-Crypt

./: Cargo.toml  Rocket.toml
migrations/2024-02-29-220431_create_users_table/: down.sql  up.sql
migrations/2024-03-02-184252_create_sessions_table/: down.sql  up.sql
migrations/2024-03-03-210041_create_secrets_table/: down.sql  up.sql
migrations/2024-03-07-084529_create_channels_table/: down.sql  up.sql
migrations/2024-03-07-084536_create_messages_table/: up.sql
migrations/2024-03-07-212438_create_user_channel_relation/: down.sql  up.sql
migrations/2024-03-14-225758_create_users/: up.sql
migrations/2024-03-14-225805_create_channels/: up.sql
migrations/2024-03-14-225822_create_messages/: down.sql  up.sql
migrations/2024-03-14-225901_create_members/: down.sql  up.sql
migrations/2024-03-14-225935_create_bans/: down.sql  up.sql
migrations/2024-03-17-063750_create_secrets/: up.sql
src/: database.rs  main.rs  models.rs  schema.rs
src/auth/: endpoints.rs  guard.rs  login.rs  mod.rs  objects.rs  test_endpoints.rs
src/chat/: endpoints.rs  mod.rs
src/database/: auth.rs  auth_database.rs  channels.rs  cryptography.rs  mod.rs  token.rs  token_database.rs
src/endpoints/: auth.rs  mod.rs
src/models/: channel.rs  error.rs  login_request.rs  member.rs  message.rs  mod.rs  permissions.rs  register_request.rs  token.rs  user.rs  uuid.rs
src/models/channel/: channels.rs  insert.rs  mod.rs  patch.rs
src/models/channel_ban/: channel_bans.rs  mod.rs
src/models/channels/: channels.rs  insert.rs  mod.rs
src/models/member/: insert.rs  members.rs  mod.rs  patch.rs  role.rs
src/models/message/: insert.rs  messages.rs  mod.rs  patch.rs
src/models/old/: channel.rs  login_request.rs  member.rs  message.rs  register_request.rs  token.rs  user.rs  uuid.rs
src/models/user/: insert.rs  mod.rs  patch.rs  users.rs
