[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", default-features = false, features = ["json"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
diesel_migrations = "2.1.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["diesel_postgres_pool", "json"]