[package]
name = "spiritbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3


[dependencies]
rocket = { version = "0.5.0", default-features = false, features = ["json"] }
diesel = { version = "2", default-features = false, features = ["postgres", "uuid"]}
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
uuid = { version = "1.7.0", default-features = false, features = ["serde", "v4"] }
rocket_db_pools = { version = "0.1.0", default-features = false, features = ["diesel_postgres"] }


[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["diesel_postgres_pool", "json"]